--- a/.env
+++ b/.env
@@ -5,10 +5,8 @@ SECRET_KEY=insecure_dev_key
 CONTRACTS_API_URL=https://contracts.staging.canonical.com/
 STRIPE_PUBLISHABLE_KEY=pk_test_yndN9H0GcJffPe0W58Nm64cM00riYG4N46
 STORE_MAINTENANCE=false
-BADGR_URL=https://api.test.badgr.com
-TRUEABILITY_URL="https://app.trueability.com"
+SKILLABLE_URL=https://labondemand.com/api/v3
 CREDLY_URL="https://api.credly.com/v1"
-BADGR_ISSUER="36ZEJnXdTjqobw93BJElog"
 CERTIFIED_BADGE="x9kzmcNhSSyqYhZcQGz0qg"
 GOOGLE_CLOUD_DISABLE_GRPC=true
 CREDENTIALS_CONFIDENTIALITY_ENABLED=false
